Update index.html final

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Perceptrón Interactivo - Iteraciones</title>
+<title>Perceptrón Simple Funcion Escalon  Interactivo - Iteraciones</title>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <style>
 body { font-family: Arial, sans-serif; margin: 20px; }
@@ -6243,3 +6243,4 @@ const datasets =
 
 </body>
 </html>
+
