--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Perceptrón Interactivo - Iteraciones</title>
+<title>Perceptrón Simple Función Escalón - Interactivo</title>
 <script src="https://cdn.plot.ly/plotly-2.32.0.min.js"></script>
 <style>
 body { 
@@ -5865,3 +5865,4 @@ document.getElementsByClassName("tablinks")[0].click();
 
 </body>
 </html>
+
