--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ span[style*="color:red"] {
 </head>
 <body>
 <div class="main-container">
-<h1>Perceptrón Interactivo - Iteraciones</h1>
+<h1>Perceptrón Simple Función Escalón - Interactivo</h1>
 <div class="tab" id="tabButtons"></div>
 <div id="tabContents"></div>
 <div class="tabcontent" id="playgroundTab" style="display:none;">
@@ -5865,4 +5865,5 @@ document.getElementsByClassName("tablinks")[0].click();
 
 </body>
 </html>
+
 
