--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@ body {
   box-shadow: 0 8px 32px rgba(60,60,120,0.12);
   padding: 32px 32px 24px 32px;
 }
+.descripcion {
+      max-width: 800px;
+      margin: 10px auto 20px auto;
+      padding: 15px 20px;
+      background-color: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+      font-size: 15px;
+      line-height: 1.5;
+      text-align: justify;
+}
 h1 {
   text-align: center;
   color: #2d3a6b;
@@ -106,8 +117,15 @@ span[style*="color:red"] {
 </style>
 </head>
 <body>
+
 <div class="main-container">
 <h1>Perceptrón Simple Función Escalón - Interactivo</h1>
+  <div class="descripcion">
+    Este gráfico muestra cómo el perceptrón actualiza sus pesos y sesgo en cada iteración para realizar una clasificación binaria. 
+    Estos ejemplos fueron entrenados con 100 épocas, pero se cortaban si el error llegaba a 0 o no había actualización. 
+    En la pestaña <b>Jugar</b> podés usar el deslizador para ver las actualizaciones paso a paso y observar cómo cambia la recta de separación.
+    <span>— Nicolás Seivane</span>
+</div>
 <div class="tab" id="tabButtons"></div>
 <div id="tabContents"></div>
 <div class="tabcontent" id="playgroundTab" style="display:none;">
@@ -3196,6 +3214,7 @@ const puntos = {
           Actualización: <input type="range" id="slider_${dname}" min="0" value="0" step="1">
           <span id="iter_${dname}">0</span>
         </label>
+
         <label>Vector w:
           <select id="wmode_${dname}">
             <option value="normal">Normal a la recta</option>
@@ -3282,6 +3301,8 @@ const puntos = {
 
     const w = results.pesos[iter];
     const b = results.sesgos[iter];
+    const epoca = results.epocas[iter];
+    const error = results.errores[iter];
 
     // Hiperplano largo: calcula intersección con los bordes del gráfico
     const xRange = [-2, 8];
@@ -3433,10 +3454,12 @@ const puntos = {
 
     // Mostrar información y advertencia si no se logra error 0
     let infoHtml = `
+      <b>Época:</b> ${epoca}<br>
       <b>Actualización:</b> ${iter}<br>
-      <b>w:</b> [${w.map(v=>v.toFixed(3))}]<br>
+      <b>w:</b> [${w.map(v => v.toFixed(3))}]<br>
       <b>b:</b> ${b.toFixed(3)}<br>
       <b>Fórmula:</b> ${w[0].toFixed(3)}*x₁ + ${w[1].toFixed(3)}*x₂ + ${b.toFixed(3)} = 0<br>
+      <b>Error:</b> ${error}<br>
     `;
     if (results.error_best !== 0) {
       infoHtml += `<span style="color:red;"><b>Advertencia:</b> No se logró separar perfectamente el dataset.<br>
